# slacklistener

./: .cache_ggshield  .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  TESTING.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  renovate.json  requirements-dev.txt  requirements.txt  run.py  setup.sh  test_vision.py
.github/workflows/: claude-code-review.yml  docker-publish.yml  security-scan.yml  supply-chain.yml  test.yml
config/: config.example.yaml
data/: .gitkeep
docs/: IMPROVEMENTS.md
src/: __init__.py  app.py
src/handlers/: __init__.py  command_handler.py  message_handler.py
src/llm/: __init__.py  factory.py  openrouter.py  provider.py
src/llm/providers/: __init__.py  anthropic_provider.py  bedrock_provider.py  openai_provider.py
src/services/: bedrock_client.py
src/tools/: __init__.py  factory.py  tool.py
src/tools/implementations/: __init__.py  f1.py  openweathermap.py  rssfeed.py
src/utils/: config.py  input_guard.py  slack_helpers.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_vision_integration.py
tests/unit/: __init__.py  test_bedrock_client.py  test_command_handler.py  test_config.py  test_f1_tool.py  test_input_guard.py  test_message_handler.py  test_openrouter.py  test_rssfeed_tool.py  test_slack_helpers.py  test_tools.py
