[project]
name = "slacklistener"
version = "0.1.0"
description = "Slack bot using Slack Bolt + OpenRouter with configurable tools."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "slack-bolt>=1.20.1",
    "slack-sdk>=3.33.4",
    "openai>=1.59.7",
    "pyyaml>=6.0.2",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "feedparser>=6.0.11",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pytest-asyncio==1.4.0",
    "responses==0.26.1",
    "moto==5.2.2",
    "black==26.5.1",
    "pylint==4.0.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
